Moved dynamic gallery ability, bug fixes
- Moved the dynamic gallery to a load-from-file gallery
    - This is because the page takes too long to load and the web server times out
    - To counter this, there is now a script to produce the gallery file, which is then read instead of being calculated every time
- Fixed mobile bug where images displayed larger than the width of the parent size and killed the entire layout

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -4,7 +4,7 @@
 
 .clear			{ clear:both; }
 /*.photo-link		{ padding:5px; margin:5px; border:1px solid #ccc; display:block; width:200px; float:left; }*/
-.photo-link		{ padding:5px; margin:15px; display:block; width:400px; float:left; }
+.photo-link		{ padding:5px; margin:15px; display:block; max-width:400px; float:left; }
 /*.photo-link:hover	{ border-color:#999; }*/
 
 
@@ -15,12 +15,17 @@
 
 img.zoom {
     height: 100%;
-    width: 380px;
+    max-width: 380px;
+    width: 100%;
+    max-height: 266px;
     object-fit:cover;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     -o-transition: all .3s ease-in-out;
     -ms-transition: all .3s ease-in-out;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 .transition {
